--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
     "dev": "webpack-dev-server --config config/webpack.dev.conf.js --mode=development --colors --watch --progress --hot",
     "build": "webpack --config config/webpack.prod.conf.js --mode=production --colors",
     "lint": "eslint --ext .js src",
+    "lint:fix": "eslint --fix --ext .js src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
