--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
+    "core-js": "^2.5.7",
     "css-loader": "^1.0.0",
     "eslint": "^5.4.0",
     "eslint-plugin-prettier": "^2.6.2",
