--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,12 @@ node_js:
 cache:
     directories:
         - node_modules
+before_install:
+    - npm i -g npm@latest
 install:
-    - npm install
+    - npm ci
+before_script:
+    - npm run lint
 script:
     - npm run build
 deploy:
