--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/runtime": "^7.0.0",
     "i18next": "^11.7.0",
     "lodash": "^4.17.10",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-i18next": "^7.11.1",
